# files-kraken

./: .gitignore  Collector.py  LICENSE  Monitor.py  README.md  RegexTools.py  blueprints.py  collector.py  config.py  cw_backups.json  data_organizer.py  database.py  fields.py  files_kraken.py  info.py  krakens_nest.py  monitoring.py  parsers.py  pyproject.toml  requirements.txt  retools.py  setup.py
.github/workflows/: tests.yaml
examples/: advanced_example.py  easy_example.py
src/: __init__.py  blueprint.py  collector.py  data_organizer.py  database.py  fields.py  functions.py  initializer.py  monitoring.py  retools.py
src/files_kraken/: __init__.py  fields.py  info.py  initializer.py  krakens_nest.py  monitoring.py  retools.py
src/files_kraken/blueprint/: __init__.py  _blueprint.py
src/files_kraken/collector/: __init__.py  _collector.py
src/files_kraken/data_organizer/: __init__.py  _data_organizer.py
src/files_kraken/database/: __init__.py  _database.py
src/files_kraken/fields/: __init__.py  _fields.py
src/files_kraken/initializer/: __init__.py  _initializer.py
src/files_kraken/monitoring/: __init__.py  _monitoring.py
src/files_kraken/retools/: __init__.py  _retools.py
tests/: test_collector.py  test_data_organizer.py  test_database.py  test_dict_collection.py  test_fields.py  test_monitoring.py  test_retools.py  tests.py
tests/tests_data/: collector_collections.py
tests/tests_data/collector_path/run_1/results/: run_1.metrics.txt
